--- a/.gitignore
+++ b/.gitignore
@@ -40,18 +40,6 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
-
 # Bundle artifact
 *.jsbundle
 
@@ -64,3 +52,7 @@ yarn-error.log
 
 # testing
 /coverage
+
+# Environment
+.env.*
+!.env.example
