--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
-  "compilerOptions": {
-    "typeRoots": ["src/utils/types"],
-  }
+  "extends": "@react-native/typescript-config/tsconfig.json"
 }
