--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.4",
     "@react-native/typescript-config": "0.73.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
