--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "package:lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@tanstack/react-query": "^5.18.0",
     "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.3",
-    "react-native-dotenv": "^3.4.9"
+    "react-native-dotenv": "^3.4.9",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
